# Scrap-Talent-Ninja-Sage

./: .gitignore  README.md  gen_xlsx.py
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
